set font-size to 0 to prevent spacing issues

--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -10,6 +10,7 @@
     position: relative;
     display: inline-block;
     user-select: none;
+    font-size: 0;
 
     canvas {
         display: none;
